--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -7,10 +7,13 @@ overflow-x: hidden;
 
 .Nav {
     display: flex;
-     background: #204c39;
-    height: 100px;
+    width: 100vw;
+    background: #204c39;
+    height: 72px;
     z-index: 10;
     cursor: default;
+    z-index: 10;
+    padding: 0px 10px;
 }
 .Nav a {
     text-decoration: none;
@@ -20,22 +23,49 @@ overflow-x: hidden;
 .navSection {
     width: 33vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     color: white;
 }
 .navSection a {
     cursor: pointer;
 }
+
+/* left navigation */
+.leftNav {
+    justify-content: flex-start;
+
+}
+.leftNav img {
+    width: 50px;
+    height: 50px;
+    border: solid 2px white;
+}
+.profileIcon {
+    background: white;
+    border-radius: 50%;
+}
+/* center navigation */
 .centerNav {
     
 }
+/* right navigation */
+.rightNav {
+    justify-content: flex-end;
+}
 .gearMenu {
     cursor: pointer;
+    margin-top: 8px;
 }
 .menu {
     cursor: pointer;
+    margin-left: 4vw;
 }
+.gearIcon {
+    width: 35px;
+    height: 35px;
+}
+
 
 /* drop down menu */
 
@@ -81,6 +111,7 @@ overflow-x: hidden;
 .displayMenuModal {
     display: flex;
     transition: .5s;
+    z-index: 2;
 }
 .displayGearModal {
     display: flex;
@@ -121,3 +152,36 @@ overflow-x: hidden;
         transition: .5s;
     }
 }
+.menuIcon {
+    width: 35px;
+    height: 5px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
+    
+   }
+ .mobileNav {
+    cursor: pointer;
+    margin-right: 10px;
+    z-index: 10;
+    transition: .4s;
+    
+   
+   }
+    .bar1 {
+    
+     -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px) ;
+    }
+    .bar2 {
+    width: calc(35px /4);
+    margin-left: 12px;
+    
+    opacity: 0;
+    transition: .6s;
+    }
+    .bar3 {
+    
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+    }
