--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -72,15 +72,16 @@ overflow-x: hidden;
 .menuDropDown {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    background: #eee;
+    justify-content: flex-start;
+    background: white;
     transition: .5s;
     height: 300px;
     width: 40vw;
     align-self: flex-end;
     cursor: default;
-   
-    
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    z-index: 10;
+    margin-bottom: 10px;
 }
 .menuDropDown a {
     text-decoration: none;
@@ -88,18 +89,39 @@ overflow-x: hidden;
      cursor: pointer;
 }
 
-
+.menuDropDown a {
+    text-decoration: none;
+    color: black;
+     cursor: pointer;
+}
+/* gear drop down menu */
 .gearDropDown {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    background: #eee;
+    justify-content: flex-start;
+    background: white;
     transition: .5s;
     height: 300px;
     width: 40vw;
     align-self: flex-end;
     cursor: default;
+    border-radius: 3px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    margin-bottom: 10px;
+   
     
+}
+.gearDropDown h3 {
+    width: 100%;
+    background: #eee;
+    line-height: 20pt;
+    border-top: solid 1px rgb(178, 178, 178);
+}
+.gearDropDown p {
+    border-top: solid 1px rgb(178, 178, 178);
+    padding-top: 10px;
+
+
 }
 .gearDropDown a {
     text-decoration: none;
@@ -137,7 +159,7 @@ overflow-x: hidden;
     }
     .hideMenuModal {
         margin: 0;
-        margin-top: -300px;
+        margin-right: -100vw;
         opacity: 0;
         transition: .5s;
     }
