--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -5,12 +5,33 @@
     justify-content: center;
     align-content: center;
     align-items: center;
+    background-color: #eeeeee;
+
 }
 .loginBox {
     height: 50vh;
     width: 50vw;
     border: solid black 1px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
+    background-color: #204c39;
+    border-radius: 5%;
+}
+.infoBox {
+    width: 90%;
+    height: 30vh;
+    background-color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 5vh;
+}
+.loginButton {
+    border: none;
+    width: 10vw;
+    height: 10vh;
+    font-size: 5vh;
+
 }
