--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -9,20 +9,23 @@
 
 }
 .loginBox {
-    height: 50vh;
-    width: 50vw;
-    border: solid black 1px;
+    min-height: 600px;
+    width: 60vw;
+    min-height: 60vw;
+    background: white;
+    border-radius: 5px;
+    border: solid 1px rgb(178, 178, 178);
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
     align-items: center;
-    background-color: #204c39;
-    border-radius: 5%;
+    justify-content: space-around;
 }
 .infoBox {
     width: 90%;
     height: 30vh;
     background-color: white;
+    border: solid black 1px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,7 +33,7 @@
 }
 .loginButton {
     border: none;
-    width: 10vw;
+    width: 20vw;
     height: 10vh;
     font-size: 5vh;
 
