--- a/src/Components/SearchCollege/SearchCollege.css
+++ b/src/Components/SearchCollege/SearchCollege.css
@@ -1,6 +1,6 @@
 .search_header {
     background-color: white;
-    height: 30vh;
+    height: 45vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -11,6 +11,7 @@
     font-size: 24px;
     font-weight: bold;
     color: #204C39;
+    margin-top: 100px;
 }
 
 .search_inputs {
@@ -62,5 +63,5 @@
 
 .displayed_colleges {
     background-color: #BABABA;
-    height: 70vh;
+    height: 100vh;
 }
