--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -15,7 +15,6 @@ z-index: 5;
     height: 70px;
     z-index: 10;
     cursor: default;
-    
 }
 .Nav a {
     text-decoration: none;
@@ -43,6 +42,7 @@ z-index: 5;
     width: 50px;
     height: 50px;
     border: solid 2px white;
+    margin-left: 10px;
 }
 .profileIcon {
     background: white;
@@ -74,17 +74,25 @@ z-index: 5;
 /* drop down menu */
 .modalHolder {
     width: 100vw;
+    
     display: flex;
     justify-content: flex-end;
     overflow-x:hidden;
     position: absolute;
-    
+    z-index: 5;
+    margin-top: 0px;
     height: 400px;
-
+    height: 100vh;
+    transition: .5s;
+    background: rgba(51, 51, 51, 0.5);
     
-
 }
 
+.hideModal {
+    z-index: -1;
+    margin-right: -100vw;
+    background: transparent;
+}
 
 
 
