--- a/src/Components/Loading/Loading.css
+++ b/src/Components/Loading/Loading.css
@@ -5,17 +5,19 @@
     justify-content: center;
     align-content: center;
     align-items: center;
+    background-color: #424242;
 }
 .loader {
-    border: 16px solid #eeeeee; /* Light grey */
-    border-top: 16px solid #204c39; /* Blue */
+    border: 6px solid #424242; /* Light grey */
+    border-top: 6px solid #3feee6; /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    animation: spin 2s linear infinite;
+    animation: spin 1.1s linear infinite;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
+    50% { transform: rotate(240deg); }
     100% { transform: rotate(360deg); }
 }
