--- a/src/Components/SearchCollege/SearchCollege.css
+++ b/src/Components/SearchCollege/SearchCollege.css
@@ -11,7 +11,7 @@
     font-size: 24px;
     font-weight: bold;
     color: #204C39;
-    margin-top: 100px;
+    margin-top: 90px;
 }
 
 .search_inputs {
@@ -22,7 +22,7 @@
     justify-content: space-around;
     align-items: flex-start;
     margin: 15px;
-    color: #262626;
+    color: #414141;
 }
 
 .college_input_header {
@@ -31,7 +31,7 @@
 }
 
 .college_input {
-    border: 1px #262626 solid;
+    border: 1px #414141 solid;
     border-radius: 5px;
     margin-left: 5px;
     width: 209px;
@@ -40,7 +40,7 @@
 
 .state_dropdown {
     width: 50px;
-    border: 1px #262626 solid;
+    border: 1px #414141 solid;
     font-size: 14px;
     margin-left: 5px;
     padding: 2px;
@@ -52,16 +52,30 @@
 
 .search_button {
     margin-left: 25px;
-    border: 1px #262626 solid;
+    border: 1px #57bc90 solid;
     border-radius: 5px;
-    background-color: #204C39;
+    background-color: #57BC90;
     color: white;
-    font-size: 14px;
+    font-size: 16px;
     height: 30px;
     width: 65px;
 }
 
 .displayed_colleges {
-    background-color: #BABABA;
+    /* background: linear-gradient(to bottom right, #57bc90, #77c9d4 ); */
+    background: lightgrey;
     height: 100vh;
+}
+
+.colleges {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.school_name {
+    font-size: 18px;
+    margin-top: 10px;
+    margin-left: 15px;
 }
