assessment and server etc

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
 .contentHolder {
   padding-top: 70px;
 }
+
+/* 
+-------- COLOR SCHEME ----------
+#015249 deep jungle green
+#77c904 feather
+#57bc90 marine
+#414141 matte
+#a5a5af sleekgrey 
+
+*/
