--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300');
+
 .backgroundVideo {
 display: flex;
 justify-content: space-around;
 align-items: center;
 align-content: center;
 flex-direction: row;
-z-index: -1
+z-index: -1;
+overflow: hidden;
+height: 100vh;
+width: 100vw;
+
+
 
 
 
@@ -38,13 +45,14 @@ width: 80vw;
     height: 50vh;
     width: 30vw;
     display: flex;
-    justify-content: center;
+   
     align-content: center;
     align-items: center;
     flex-direction: column;
-
+    
     color: white;
     border-right: solid white 1px;
+    
 }
 /* .divider {
     height: 50vh;
@@ -68,7 +76,32 @@ width: 80vw;
     width: 20vw;
     font-size: 20px;
     border-radius: 5px;
+    background: #eee;
+    border: solid 1px rgb(178, 178, 178);
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3);
+    font-family: 'Open Sans Condensed', sans-serif;
+    
+    
 }
+
 .title{
     font-size: 10vh;
+    margin-right: 1vw;
+}
+.subTitle{
+    margin-top: -4vh;
+    font-family: 'Amatic SC', cursive;
+    font-size: 5vh;
+    padding-bottom: 5vh;
+    margin-right: 1vw;
+    
+}
+.about {
+    margin-right: 1vw;
+    font-family: 'Open Sans Condensed', sans-serif;
+    
+}
+.logoPhoto {
+    height:25vh;
+    width: 15vw;
 }
