--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,7 +2,35 @@
     height: 400px;
     background: white;
     width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.3);
 }
 .footerItemsHolder {
+
+height: 80%;
+width: 100vw;
+max-width: 1250px;
+display: flex;
+justify-content: space-around;
+align-items: center;
+color: #414141;
+}
+
+.footerSection {
+    width: 33.3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.footerSection a {
+    cursor: pointer;
+}
+.footerSection:nth-child(2) {
+    border-left: solid 2px #eee;
+    border-right: solid 2px #eee;
 
 }
