--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -16,6 +16,8 @@ z-index: 5;
     height: 70px;
     z-index: 10;
     cursor: default;
+    /* border-bottom: solid 1px #414141; */
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3);
 }
 .Nav a {
     text-decoration: none;
@@ -37,14 +39,17 @@ z-index: 5;
 /* left navigation */
 .leftNav {
     justify-content: flex-start;
-
+    width: 33.3%;
 }
 .leftNav img {
     width: 50px;
     height: 50px;
-    border: solid 2px white;
     margin-left: 10px;
-    background: red;
+    
+}
+.leftNav img:hover {
+    opacity: .5;
+    
 }
 .profileIcon {
     background: white;
@@ -52,12 +57,18 @@ z-index: 5;
 }
 /* center navigation */
 .centerNav {
-    
+    width: 33.3%;
+}
+.centerNav img{
+    margin-bottom: 0px;
+    border: solid 1px white;
+    height: 60px;
 }
 /* right navigation */
 .rightNav {
     justify-content: flex-end;
     z-index: 10;
+    width: 33.3%;
 }
 .gearMenu {
     cursor: pointer;
@@ -109,17 +120,25 @@ z-index: 5;
     transition: .5s;
     height: 300px;
     width: 25vw;
+    border-radius: 3px;
     align-self: flex-start;
     cursor: default;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     text-align: left;
+    
 }
 .menuDropDown h3 {
     width: 94%;
+    margin: 0;
+    padding: 0;
     padding-left: 6%;
     line-height: 26px;
     border-bottom: solid 1px rgb(178, 178, 178);
-    color: #204c39
+    color: #57BC90;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Amatic SC', cursive;
+    font-size: 24pt;
+    line-height: 24pt;
 }
 .menuLinkHolder {
     width: 90%;
@@ -168,11 +187,18 @@ z-index: 5;
 }
 .gearDropDown h3 {
     width: 94%;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px;
     padding-left: 6%;
     background: #eee;
     line-height: 26px;
     border-top: solid 1px rgb(178, 178, 178);
-    color: #204c39;
+    color: #57BC90;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Amatic SC', cursive;
+    font-size: 24pt;
+    line-height: 24pt;
 }
 
 .gearDropDown a {
@@ -183,6 +209,7 @@ z-index: 5;
      line-height: 30px;
      width: 90%;
      transition: .4s;
+     
 }
 .gearDropDown a:hover {
     background: #bababa;
