--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,11 +1,194 @@
-.profileContent {
-    border-top: solid 1px black;
-    padding-top: 70px;
-    
-}
+
 .Profile {
-background: linear-gradient(to bottom right, #77c9d4, #57bc90);
+     background: linear-gradient(to bottom right, #77c9d4,#57bc90);
     min-height: 100vh;
     overflow-x: hidden;
     color: white;
+}
+.profileContentHolder {
+padding-top: 70px;
+display: flex;
+justify-content: center;
+}
+/* ALL PROFILE CONTENT SECTIONS */
+.profileContent {
+    min-height: calc(100vh - 70px);
+    max-width: 1250px;
+    width: 100vw;
+    /* background: rgba(255, 255, 255, 0.192); */
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    
+}
+
+
+
+
+/* CENTER PROFILE SECTION */
+.centerProfileHolder {
+    width: 50%;
+    
+    
+    color: #414141;
+    /* background: linear-gradient(to bottom right, #77c9d4, #57bc90); */
+    
+}
+.centerSection {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    margin-top: 10px;
+    padding-bottom: 20px;
+    width: 100%;
+    min-height: 50vh;
+    background: white;
+    transition: .6s;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    border: solid 3px white;
+}
+.topSectionProfile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+.profileHeader {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    width: 100%;
+    height: 200px;
+    /* background: linear-gradient(to bottom right, #77c9d4,#57bc90,#77c9d4); */
+    background-image: url('./coverPhoto.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items:flex-end;
+    transition: .5s;
+    margin-bottom: 60px;
+}
+
+.centerSectionHeader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% - 4px);
+    margin-top: 2px;
+    height: 30px;
+    /* border: solid 1px #A5A5AF; */
+    background: #eee;
+    border-radius: 3px;
+}
+@media (max-width:800px) {
+    .profileHeader {
+        height: 175px;
+    }
+}
+@media (max-width:500px) {
+    .profileHeader {
+        height: 150px;
+    }
+}
+.profileImgHolder {
+    width: 120px;
+    height: 120px;
+    background: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -60px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+}
+.profileHeader img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: solid 2px white;
+}
+.topProfileInfo {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.topProfileInfo h3 {
+    margin: 0;
+    padding: 0;
+}
+.topProfileInfo p {
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+/* LEFT AND RIGHT SECTIONS */
+.profileSideSection {
+    margin-top: 10px;
+    width: calc(23% - 6px);
+    max-width: 23%;
+    min-height: 300px;
+    background: white;
+    color: #414141;
+    border-radius: 5px;
+    border: solid 3px white;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    transition: .3s;
+}
+.sideSectionHeader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% - 4px);
+    margin-top: 2px;
+
+    height: 30px;
+    /* border: solid 1px #A5A5AF; */
+    background: #eee;
+    border-radius: 3px;
+    
+}
+.sideSectionHeader h4 {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans Condensed', sans-serif;
+font-family: 'Amatic SC', cursive;
+font-size: 20pt;
+}
+@media (max-width: 800px) {
+    .profileContent {
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        
+    }
+    
+    .profileSideSection {
+        width: 90vw;
+        max-width: 90vw;
+    }
+    .progressDivHolder {
+        height: 40px;
+        min-height: 40px;
+        justify-content: center;
+    }
+    .sideSectionHeader {
+        border: none;
+    }
+    .centerProfileHolder {
+        width: 90vw;
+        
+        max-width: 100vw;
+
+    }
 }
