--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,14 +1,17 @@
 
 .Profile {
-     background: linear-gradient(to bottom right, #77c9d4,#57bc90);
+    background: linear-gradient(to bottom right, #77c9d4,#57bc90);
     min-height: 100vh;
+    width: 100vw;
     overflow-x: hidden;
     color: white;
+
 }
 .profileContentHolder {
-padding-top: 70px;
-display: flex;
-justify-content: center;
+    padding-top: 70px;
+    display: flex;
+    justify-content: center;
+
 }
 /* ALL PROFILE CONTENT SECTIONS */
 .profileContent {
@@ -20,6 +23,7 @@ justify-content: center;
     justify-content: space-around;
     align-items: flex-start;
     
+    
 }
 
 
@@ -28,8 +32,6 @@ justify-content: center;
 /* CENTER PROFILE SECTION */
 .centerProfileHolder {
     width: 50%;
-    
-    
     color: #414141;
     /* background: linear-gradient(to bottom right, #77c9d4, #57bc90); */
     
@@ -96,19 +98,27 @@ justify-content: center;
 .profileImgHolder {
     width: 120px;
     height: 120px;
-    background: red;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: -60px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    background: white;
+    transition:.2s;
+}
+
+.profileImgHolder img:hover {
+    opacity: .9;
+    transform: scale(1.05);
 }
 .profileHeader img {
     width: 120px;
     height: 120px;
     border-radius: 50%;
     border: solid 2px white;
+    transition: .1s;
 }
 .topProfileInfo {
     margin-top: 15px;
@@ -129,6 +139,7 @@ justify-content: center;
 
 
 /* LEFT AND RIGHT SECTIONS */
+
 .profileSideSection {
     margin-top: 10px;
     width: calc(23% - 6px);
@@ -145,6 +156,20 @@ justify-content: center;
     justify-content: flex-start;
     transition: .3s;
 }
+
+@media (min-width:800px) {
+.profileSideSection {
+    position: fixed;
+}
+.favorites {
+    right: 5px;
+
+}
+.progressDivHolder {
+    left: 5px;
+    }
+}
+
 .sideSectionHeader {
     display: flex;
     justify-content: center;
