--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -45,6 +45,7 @@ z-index: 5;
     width: 50px;
     height: 50px;
     margin-left: 10px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
     
 }
 .leftNav img:hover {
