--- a/src/Components/SearchCollege/SearchCollege.css
+++ b/src/Components/SearchCollege/SearchCollege.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300');
+
 .search_header {
+    font-family: 'Amatic SC', cursive;
+    font-weight: bold;
     background-color: white;
     height: 45vh;
     width: 100%;
@@ -8,9 +12,9 @@
 }
 
 .search_title {
-    font-size: 24px;
+    font-size: 35px;
     font-weight: bold;
-    color: #204C39;
+    color: #015249;
     margin-top: 90px;
 }
 
@@ -26,7 +30,7 @@
 }
 
 .college_input_header {
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
 }
 
@@ -64,7 +68,7 @@
 .displayed_colleges {
     /* background: linear-gradient(to bottom right, #57bc90, #77c9d4 ); */
     background: lightgrey;
-    height: 100vh;
+    height: 100%;
 }
 
 .colleges {
@@ -72,10 +76,44 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    font-family: 'Open Sans Condensed', sans-serif;    
 }
 
 .school_name {
-    font-size: 18px;
+    font-size: 22px;
     margin-top: 10px;
     margin-left: 15px;
+    font-weight: bold;
+}
+
+.dropdown {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.college_dropdown {
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin-left: 20px;
+    font-size: 20px;
+}
+
+.fave_button {
+   margin-right: 20px;
+}
+
+.page_container {
+    background: lightgrey;
+    padding-top: 25px;
+}
+
+.page_numbers {
+    margin-right: 5px;
 }
