--- a/src/Components/CreateUser/CreateUser.css
+++ b/src/Components/CreateUser/CreateUser.css
@@ -129,7 +129,7 @@
 }
 
 /* submit button */
-.createUserNextBtn {
+.editProfileBtnHolder {
     
     width: 100px;
     height: 30px;
@@ -145,12 +145,18 @@
     margin: 0;
     /* margin: 10px 0px; */
 }
-.createUserNextBtn:hover {
+.editProfileBtnHolder:hover {
     background: rgba(238, 238, 238, 0.49);
     
 }
-.createUserNextBtn:active {
+.editProfileBtnHolder:active {
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+}
+.cancelBtn {
+    margin-right: 2vw;
+}
+.hide {
+    display: none;
 }
 @media (max-width:800px) {
     .createuserHolder {
