--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -105,3 +105,39 @@ width: 80vw;
     height:25vh;
     width: 15vw;
 }
+@media (max-width:800px) {
+    .wholeScreen{
+        justify-content: space-around;
+    }
+    .boxes{
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+    }
+    .infoSide{
+        border: none;
+        width: 60vw;
+        display: flex;
+        justify-content: space-around;
+
+    }
+    .loginSide{
+        border: none;
+        width: 80vw;
+    }
+    .logoPhoto{
+        padding-top: 10vh;
+        height: 15vh;
+        width: 12vw;
+    }
+    .loginButton{
+        width: 45vw;
+    }
+    .subTitle{
+        font-size: 5vh;
+
+    }
+   .about{
+       font-size: 3vh;
+   }
+}
