--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,22 +1,101 @@
 .Footer {
     height: 400px;
-    background: white;
+    background: #414141;
     width: 100vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     margin-top: 60px;
     box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.3);
 }
-.footerItemsHolder {
+/* **********************LEFT SECTION************************** */
+.leftTitle {
+    color: #eee;
+    /* background-color: blue; */
+}
+.leftSection {
+    display: flex;
+    flex-direction: column;
+    width: 33.3%;
+    /* background-color: red; */
+    border-right: thin solid #eee;
+}
+.leftContent {
+    display: flex;
+    margin-top: 50px;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.leftContent a {
+    color: #eee;
+    text-decoration: none;
+}
+.leftContent a :hover {
+    color: red;
+}
+/* **********************MID SECTION************************** */
+.midTitle {
+    color: #eee;
+}
+.midSection {
+    display: flex;
+    flex-direction: column;
+    width: 33.3%;
+}
+.midContent {
+    margin-top: 30px;
+}
 
+
+/* ****************RIGHT SECTION******************************* */
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .footerItemsHolder {
 height: 80%;
 width: 100vw;
 max-width: 1250px;
 display: flex;
 justify-content: space-around;
 align-items: center;
-color: #414141;
+color: #eee;
+}
+.leftSection{
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+}
+
+.fa fa-facebook-square {
+    color: white;
+}
+.leftFooterSectionHeader{
+    justify-content: flex-start;
+}
+
+.footerItemsHolder a {
+    text-decoration: none;
+    color: #eee;
+    cursor: pointer;
+}
+.footerItemsHolder a:hover {
+    color: red;
+}
+
+.middleSection {
+    display: flex;
+    flex-direction: column;
+    width: 110vw;
 }
 
 .footerSection {
@@ -26,11 +105,17 @@ color: #414141;
     align-items: center;
     height: 100%;
 }
-.footerSection a {
-    cursor: pointer;
-}
 .footerSection:nth-child(2) {
-    border-left: solid 2px #eee;
-    border-right: solid 2px #eee;
-
+    border-left: thin solid #eee;
 }
+.footerSection:nth-child(1) {
+    border-left: thin solid #eee;
+}
+
+@media (max-width: 800px) {
+    .Footer {
+        height: 400px;
+        max-width: 100vw;
+        height: 400px;
+    }
+} */
