--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -100,7 +100,7 @@ z-index: 5;
     height: 100vh;
     transition: .5s;
     background: rgba(51, 51, 51, 0.5);
-    
+    position: fixed;
 }
 
 .hideModal {
@@ -168,6 +168,7 @@ z-index: 5;
 }
 /* gear drop down menu */
 .gearDropDown {
+    
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
