--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -42,7 +42,7 @@
     margin-top: 10px;
     padding-bottom: 20px;
     width: 100%;
-    min-height: 50vh;
+    min-height: 25vh;
     background: white;
     transition: .6s;
     border-radius: 5px;
@@ -203,14 +203,7 @@
 
 
 /* LEFT AND RIGHT SECTIONS */
-.leftSide {
-    position: fixed;
-    left: 1%;
-}
-.rightSide {
-    position: fixed;
-    right: 1%;
-}
+
 .profileSideHolder {
     
     display: flex;
@@ -242,31 +235,51 @@
     width: 100%;
     max-height: calc(90vh - 70px);
 }
-
-
+.favItem {
+    text-align: left;
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    overflow-x: hidden;
+}
+.favItem li {
+    color: #414141;
+    word-wrap: normal;
+    height: 20px;
+    background: white;
+    overflow-y: hidden;
+}
+.favItem a{
+    color: #57BC90;
+    text-decoration: none;
+    font-size: 10pt;
+    transition: .7s;
+    font-family: 'Open Sans Condensed', sans-serif;
+   
+}
+.favItem:hover a {
+    color: #414141;
+    transition: .2s;
+}
+.favItem a:active {
+    color: #414141;
+}
 @media (min-width:800px) {
-.profileSideSection {
-    /* position: fixed; */
-}
-.favorites {
-    right: 5px;
 
+.leftSide {
+    position: fixed;
+    left: 1%;
+}
+.rightSide {
+    position: fixed;
+    right: 1%;
+    
+    }
+    .rightSideSection {
+        min-height: 416px;
+    }
 }
 
-.progressDivHolder {
-    left: 5px;
-    }
-}
-@media (min-width: 1450px){
-    .favorites {
-        right: 4vw;
-        transition: 1s;
-    }
-    .progressDivHolder {
-        left: 4vw;
-        transition: 1s;
-    }
-}
 
 .sideSectionHeader {
     display: flex;
@@ -316,5 +329,31 @@
         
 
     }
-    
+    .rightSide {
+        width: 90vw;
+    }
+    .rightSideSection {
+        width: 100%;
+    }
+
+    .favItem {
+    text-align: left;
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+}
+.favItem li {
+    color: #414141;
+    word-wrap: normal;
+    height: 30px;
+    background: white;
+}
+.favItem a{
+    color: #57BC90;
+    text-decoration: none;
+    font-size: 16pt;
+    transition: .7s;
+    font-family: 'Open Sans Condensed', sans-serif;
+   
+}
 }
