--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -56,6 +56,8 @@
     margin-top: 30px;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 20px;
+    margin-right: 6px;
+    margin-left: 6px;
 }
 
 
