--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -19,11 +19,15 @@
     max-width: 1450px;
     width: 100vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     
 }
-
+@media (max-width:800px) {
+    .profileContent {
+        justify-content: space-between;
+    }
+}
 
 
 /* CENTER PROFILE SECTION */
@@ -80,7 +84,6 @@
     width: calc(100% - 4px);
     margin-top: 2px;
     height: 30px;
-    /* border: solid 1px #A5A5AF; */
     background: #eee;
     border-radius: 3px;
     font-family: 'Amatic SC', cursive;
@@ -209,43 +212,35 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    /* width: 30%; */
-    height: 500px;
-    background: green;
-    
-
-    
+    width: 23%;
+    margin: 0px;
 }
+
 .profileSideSection {
     margin-top: 10px;
     background: white;
     color: #414141;
     border-radius: 5px;
-    border: solid 3px white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     transition: .3s;
-    display: none;
-    background: blue;
     width: 100%;
+    min-height: 192px;
+    border: solid 4px white;
 }
-
-
 
 .sideSectionHeader {
     display: flex;
     justify-content: center;
     align-items: center;
-  
     margin-top: 2px;
     height: 30px;
-    
+    width: 100%;
     background: #eee;
     border-radius: 3px;
-     
 }
 
 .sideSectionHeader h4 {
@@ -290,13 +285,32 @@
 .favItem a:active {
     color: #414141;
 }
+
+/* desktop section */
 @media (min-width:800px) {
 
     .rightSideSection {
-        min-height: 416px;
+        min-height: 400px;
+        
     }
-    
+    .leftSide {
+        margin-left: 15px;
+        width: calc( 23% - 15px);
+    }
+    .rightSide {
+        margin-right: 15px;
+        width: calc( 23% - 15px);
+    }
+    .leftSide {
+    left: 0;
+    position: fixed;
 }
+.rightSide {
+    right: 0;
+    position: fixed;
+}
+}
+/* mobile and tablet section */
 @media (max-width: 800px) {
     .profileContent {
         flex-direction: column;
@@ -305,46 +319,36 @@
         
     }
     .profileSideSection {
-
+        width: 48%;
     }
     .profileSideHolder {
         width: 90vw;
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-start;
         order: 2;
     }
-    .profileSideSection {
-        /* width: 48% */
-    }
+   
     .sideSectionHeader {
         border: none;
     }
     .centerProfileHolder {
         width: 90vw;
         max-width: 100vw;
-        
-
     }
-    /* .rightSide {
-        width: 90vw;
-    }
-    .rightSideSection {
-        width: 100%;
-    } */
-
     .favItem {
     text-align: left;
     display: flex;
     align-items: center;
     margin-left: 5%;
 }
-.favItem li {
+    .favItem li {
     color: #414141;
     word-wrap: normal;
     height: 30px;
     background: white;
 }
-.favItem a{
+    .favItem a{
     color: #57BC90;
     text-decoration: none;
     font-size: 16pt;
@@ -352,4 +356,14 @@
     font-family: 'Open Sans Condensed', sans-serif;
    
     }
+    .profileSideHolder {
+        flex-direction: column;
+    }
+     .profileSideSection {
+        width: 100%
+    }
+    .rightSideSection {
+        width: 100%;
+    }
+    
 }
